--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -3,10 +3,12 @@
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="~/adminplugins/select2/css/select2.min.css" rel="stylesheet" />
 <style>
-    .note-editor .btn{
-        min-width:0px !important;
+    .note-editor .btn {
+        min-width: 0px !important;
     }
+
     .note-editor .btn-sm {
         min-width: 0px !important;
     }
@@ -92,13 +94,13 @@
                                 <div class="form-group has-feedback">
                                     <label for="summernote" class="col-sm-3 control-label">About Self<span class="text-danger small">*</span></label>
                                     <div class="col-sm-8">
-                                        @Html.TextArea("ProfileDescription", new { @class = "form-control", @id = "summernote",@placeholder="Write about yourself..." })
+                                        @Html.TextArea("ProfileDescription", new { @class = "form-control", @id = "summernote", @placeholder = "Write about yourself..." })
                                     </div>
                                 </div>
                                 <div class="form-group has-feedback">
                                     <label for="profileimage" class="col-sm-3 control-label">Profile Image<span class="text-danger small">*</span></label>
                                     <div class="col-sm-8">
-                                       <input type="file" name="profileimage" onchange="return validateFileType()" id="profileimage">
+                                        <input type="file" name="profileimage" onchange="return validateFileType()" id="profileimage">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -116,7 +118,7 @@
                                     </div>
                                 </div>
                             </div>
-                            </form>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -126,6 +128,7 @@
     </div>
 
 </section>
+<script asp-append-version="true" src="~/adminplugins/select2/js/select2.min.js"></script>
 @*@Scripts.Render("~/bundles/Tags")*@
 <script>
     $(document).ready(function () {
